-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.0
-
-
28610e13e453c33d7118834a0effb7ac87427ffe (qt/qtquickcontrols2/5.14)
Our app uses a custom QQuick.Controls 2 style with a fallback style to "Material"
Building the app with 5.14, on android, this doesn't work any more.
This code:
qDebug() << "styles:" << QQuickStyle::availableStyles();
QQuickStyle::setFallbackStyle("Material");
throws the following error:
D nymea-app: styles: ("Default", "Fusion", "Imagine", "Material", "Universal") W nymea-app: ERROR: unable to locate fallback style "Material" I nymea-app: QQuickStyle::setFallbackStyle(): the fallback style must be the name of one of the built-in Qt Quick Controls 2 styles.
This used to work fine on Android builds with Qt < 5.14 and still works on Linux Desktop with Qt 5.14.
Also this
QQuickStyle::setStyle("Material");
still works fine.
| For Gerrit Dashboard: QTBUG-81216 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 286830,2 | Look for the fallback style in all of the style paths | 5.14 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
| 290598,2 | Look for the fallback style in all of the style paths | 5.15 | qt/qtquickcontrols2 | Status: MERGED | 0 | 0 |