Look for the fallback style in all of the style paths

Fixes: QTBUG-81216
Change-Id: I9d3efeec7f9ec2beda24ff74e39d04104f5eb967
Reviewed-by: BogDan Vatra <bogdan@kdab.com>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>